vlib/v/checker/tests/shared_bad_args.out
vlib/v/checker/tests/shared_bad_args.vv:43:8: error: r is `shared` and must be `rlock`ed or `lock`ed to be used as non-mut receiver
   41 |     shared r := Qr{ a: 7 }
   42 |     lock s {
   43 |         u := r.s_val(s)
      |              ^
   44 |         println(u)
   45 |     }
vlib/v/checker/tests/shared_bad_args.vv:47:16: error: s is `shared` and must be `rlock`ed or `locked` to be passed as non-mut argument
   45 |     }
   46 |     lock r {
   47 |         v := r.s_val(s)
      |                      ^
   48 |         println(v)
   49 |     }
vlib/v/checker/tests/shared_bad_args.vv:50:13: error: m is `shared` and must be `rlock`ed or `lock`ed to be passed as non-mut argument
   48 |         println(v)
   49 |     }
   50 |     w := m_val(m)
      |                ^
   51 |     x := a_val(a)
   52 |     println('$w $x')
vlib/v/checker/tests/shared_bad_args.vv:51:13: error: a is `shared` and must be `rlock`ed or `lock`ed to be passed as non-mut argument
   49 |     }
   50 |     w := m_val(m)
   51 |     x := a_val(a)
      |                ^
   52 |     println('$w $x')
   53 | }
vlib/v/checker/tests/shared_bad_args.vv:61:3: error: r is `shared` and must be `lock`ed to be passed as `mut`
   59 |     shared r := Qr{ a: 7 }
   60 |     lock s {
   61 |         r.s_mut(mut s)
      |         ^
   62 |     }
   63 |     lock r {
vlib/v/checker/tests/shared_bad_args.vv:64:15: error: s is `shared` and must be `lock`ed to be passed as `mut`
   62 |     }
   63 |     lock r {
   64 |         r.s_mut(mut s)
      |                     ^
   65 |     }
   66 |     m_mut(mut m)
vlib/v/checker/tests/shared_bad_args.vv:66:12: error: m is `shared` and must be `lock`ed to be passed as `mut`
   64 |         r.s_mut(mut s)
   65 |     }
   66 |     m_mut(mut m)
      |               ^
   67 |     a_mut(mut a)
   68 | }
vlib/v/checker/tests/shared_bad_args.vv:67:12: error: a is `shared` and must be `lock`ed to be passed as `mut`
   65 |     }
   66 |     m_mut(mut m)
   67 |     a_mut(mut a)
      |               ^
   68 | }
